# recallgate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
.recallgate/: config.toml  index.json
.recallgate/roles/: coder.md  planner.md  reviewer.md  security.md  tester.md  writer.md
docs/: ARCHITECTURE.md  PROJECT_PLAN.md  ROADMAP.md
examples/: quickstart.sh
src/recallgate/: __init__.py  cli.py  core.py
tests/: __init__.py  test_cli.py  test_core.py
