[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recallgate"
version = "0.1.0"
description = "Token-efficient controllable memory gate for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "RecallGate Contributors"}]
keywords = ["ai", "agent", "memory", "token", "context", "cli", "coding-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lamguo/recallgate"
Repository = "https://github.com/lamguo/recallgate"
Issues = "https://github.com/lamguo/recallgate/issues"

[project.scripts]
recall-gate = "recallgate.cli:main"
recallgate = "recallgate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
